# kumquat

./: CMakeLists.txt  README.md
biblio/: bibliography.bib
src/algebra/example/: CMakeLists.txt  finite_ring_Z6_example.cpp  infinite_ring_Z_example.cpp  laurent_polynomial_example.cpp  number_theory_example.cpp  ring_Q_mod_Z_example.cpp  simple_C_example.cpp
src/algebra/include/kumquat/: C.h  Jones_polynomial.h  Laurent_polynomial.h  Laurent_polynomial_mp.h  Q.h  Q_U1.h  Q_mod_Z.h  R.h  Rational_function.h  Rational_function_integral_mp.h  Ring.h  Z.h  Z_mod_nZ.h  number_theory.h  template_ring.h  template_scalar.h
src/algebraic_elements/example/: CMakeLists.txt  laurent_polynomial_example.cpp  simple_complex_number.cpp  simple_rational_function_flint.cpp
src/algebraic_elements/include/kumquat/: Complex_number.h  Rational_function_flint.h  Rational_function_integral_mp.h
src/algebraic_structures/example/: CMakeLists.txt  abelian_group_example.cpp  simple_C_example.cpp
src/algebraic_structures/include/kumquat/: C.h  Laurent_polynomial.h  Laurent_polynomial_bounded_degree.cpp  Laurent_polynomial_mp.h  Q_mod_Z.h  R.h  Rational_function.h  Rational_function_flint.cpp  Rational_function_integral_mp.h  Ring_over.h  template_ring.h  template_scalar.h
src/braid/example/: CMakeLists.txt  simple_braid_example.cpp
src/braid/include/kumquat/: Braid.h  Plat_braid.h
src/cmake/modules/: FindFlint.cmake  FindGMP.cmake  FindMPFI.cmake  KUMQUAT_compilation_flags.cmake  KUMQUAT_doxygen_target.cmake  KUMQUAT_modules.cmake  KUMQUAT_third_party_libraries.cmake  LibFindMacros.cmake
src/concepts/: AbelianGroup.h  AlgebraicElementField.h  AlgebraicElementPoset.h  AlgebraicElementPrincipalIdealDomain.h  AlgebraicElementRing.h  AlgebraicElementSet.h  AlgebraicStructureAbelianGroup.h  AlgebraicStructureField.h  AlgebraicStructureMonoid.h  AlgebraicStructurePrincipalIdealDomain.h  AlgebraicStructurePseudoRing.h  AlgebraicStructureRing.h  AlgebraicStructureSet.h  Category.h  IntegerNumber.h  ModularCategory.h  Monoid.h  MonoidalCategory.h  ObjectMonoidalCategory.h  PrincipalIdealDomain.h  PseudoRing.h  RibbonCategory.h  Ring.h  ScalarFieldOperations.h  ScalarGroupOperations.h  ScalarPIDOperations.h  ScalarPosetOperations.h  ScalarRingOperations.h  ScalarSetOperations.h  Set.h
src/matrix/example/: CMakeLists.txt  dense_matrix_Qp_mod_Z_gram_normalization_example.cpp  dense_matrix_multiplication_example.cpp  dense_matrix_pid_example.cpp  simple_dense_matrix_eigen.cpp  simple_dense_matrix_example.cpp  test_example.cpp
src/matrix/include/kumquat/: Dense_matrix.h  Dense_matrix_eigen.h  Free_module_finite_rank.h
src/quantum_topology/example/: CMakeLists.txt  colored_jones_polynomial.cpp  jones_polynomial_regina.cpp  simple_colored_jones_polynomial_example.cpp  simple_jones_polynomial_example.cpp  simple_quantum_data_example.cpp  simple_quantum_group_example.cpp  test_flint.cpp
src/quantum_topology/include/kumquat/: Category_free_module.h  Colored_jones_polynomial.h  Jones_polynomial.h  Quantum_data.h  Quantum_group.cpp  Quantum_group.h
src/random_process/example/: CMakeLists.txt  amplify_example.cpp  knot_markov_decision.cpp  simple_markov_decision_example.cpp  test_markov_knot.cpp
src/random_process/include/kumquat/: Markov_decision.h  Markov_decision_quantum_knot.h
src/utils/example/: CMakeLists.txt  utils_example.cpp
src/utils/include/kumquat/: utils.h
